# CodeSynthesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.iegenlib.txt.in
experiments/: Makefile  alto_test.c  bitops.hpp  rand_tensor.txt  run-alto.sub  sparse_format.c  sparse_format.h
experiments/resources/project/qaw0eS1zuuY1ar9TdPn1GMfrjbQ/: AXhU6413vrijIwBDDLQ12Jj1GkYp.xml  LDU9aMM44nTsIdPTIJacojFpPZwp.xml  M6X4hsfSIvp5OolYfyr5ywwARQEp.xml  eCebgSxJ9ra6CiBX7bhDDo2bjlop.xml  gVN-NMdR7nOGeKadZESQ8HOnoSgp.xml  xRZD9IlrGxJbOoUFxQ6kf7nbudQp.xml
experiments/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
lib/: CMakeLists.txt
scripts/: CMakeLists.txt  approx_running_time.py  artifactdocker  bcsr_csr_copy.cc  bench_harness.cc  coo3d_mcoo3d_opt.h  coo3d_mcoo3d_opt2.h  coo_csc.h  coo_csc_opt.h  coo_csc_opt2.h  coo_csr.h  coo_csr_gen_code.cc  coo_csr_opt.h  coo_csr_opt2.h  coo_dia.h  coo_dia2.h  coo_dia_trial_synthesis.cc  coo_mcoo.h  coo_mcoo_opt.h  coo_mcoo_opt2.h  create_nell_2_modified.sh  csr_csc.h  csr_csc_opt.h  csr_csc_opt2.h  csr_csc_opt2_auto.h  m_synth.h  make_fake_mtx_files.cpp  new_coo_csr_gen_code.cc  non_substitute_coo_csr.cc  opt_synth.h  scoo_csr_opt.h  synth.h  synth_csr_coo.cc  user_defs.h
scripts/plots/: Untitled.ipynb  coocsc.csv  coocsr.csv  coodia.csv  coodia2.csv  csccsr.csv  cscdia.csv  cscell.csv  csrcsc.csv  csrdia.csv  csrell.csv  plot.py
scripts/recipes/: coo_csr.script
src/: CodeSynthesis.cc  CodeSynthesis.cpp  CodeSynthesis.h  Permute.h  Visitors.cc  Visitors.h  main.cpp
src/code-gen/: CodeGen.cpp  CodeGen.h  Computation.cc  Computation.hpp  OmegaLib.cpp  OmegaLib.h
src/drivers/: code_synthesis_main.cpp  conversion_kernels.cpp
src/smt/: MinimalSatisfiablity.cpp  MinimalSatisfiablity.h  MinimalTrue.cpp  MinimalTrue.h
src/utils/: Utils.cpp  Utils.h
test/: CodeSynthesisUnitTest.cpp  unit_tests_main.cpp
test/data/: test.mtx
test/data/taco_benchmarks/: dixmaanl.mtx  jnlbrng1.mtx  obstclae.mtx
test/smt/: CodeSynthesisUnitTest.cpp  MinimalUnitTest.cpp
